UtahLiveDataTest/src/objects/PaymentSchedule__c.object
<CustomObject>
    <fields>
        <fullName>FiscalPeriod__c</fullName>
        <label>Fiscal Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <label>Fiscal Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MonthText__c</fullName>
        <label>Month Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>CASE(FiscalPeriod__c, 1, &apos;July&apos;, 2, &apos;August&apos;, 3, &apos;September&apos;, 4, &apos;October&apos;, 5, &apos;November&apos;, 6, &apos;December&apos;, 7, &apos;January&apos;, 8, &apos;February&apos;, 9, &apos;March&apos;, 10, &apos;April&apos;, 11, &apos;May&apos;, 12, &apos;June&apos;, 13, &apos;July&apos;, &apos;July&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleDate__c</fullName>
        <label>Schedule Date</label>
        <type>Date</type>
    </fields>
    <label>Payment Schedule</label>
    <nameField>
        <label>Payment Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>